--- a/index.html
+++ b/index.html
@@ -5,107 +5,26 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>esai-home</title>
+  <title>SVG Animation Fun!</title>
+  <link rel="stylesheet" type="text/css" href="./index.css" />
 </head>
 
 <body>
-  <header></header>
-  <main>
-    <span class="introduction"></span>
-  </main>
-  <footer></footer>
-  <script>
-    document.addEventListener("DOMContentLoaded", function () {
-      var EMPTY_INDEX = -1;
-      var DAY_TIMES = {
-        WEEKSTART_MORNING: 'weekstart-morning',
-        EARLY_MORNING: 'early-morning',
-        MORNING: 'morning',
-        LUNCH_TIME: 'lunch-time',
-        AFTER_NOON: 'after-noon',
-        EVENING: 'evening',
-        WORKDAY_NIGHT: 'workday-night',
-        WEEKEND_NIGHT: 'weekend-night'
-      };
-      var WEEKDAY_NIGHTS = [5,6];
-      var WEEKSTART_MORNING = 1;
-      var IS_IT = {};
-      var INTRODUCTIONS = {};
-      var MIDNIGHT = 24;
-
-      function isDayWeekend(day) {
-        return WEEKEND_NIGHT.indexOf(day) !== EMPTY_INDEX;
-      }
-
-      function isHourNight(hour) {
-        return isBetween(getCurrentHour(), 23, 4);
-      }
-
-      function getCurrentHour () {
-        return new Date(Date.now()).getHours();
-      }
-
-      function getCurrentWeekDay () {
-        return new Date(Date.now()).getDay();
-      }
-
-      function isBetween(what, a, b) {
-        var bIsAfterMidnight = b < a;
-        var isBetweenMidnightAndB  = what < b;
-        var isBetweenAandMidnight = what > a && what < MIDNIGHT
-
-        return what > a && what < b;
-      }
-
-      IS_IT[DAY_TIMES.WEEKSTART_MORNING] = function() {
-        return WEEKSTART_MORNING === getCurrentWeekDay();
-        return isBetween(getCurrentHour(), 4, 6);
-      };
-
-      IS_IT[DAY_TIMES.EARLY_MORNING] = function () {
-        return isBetween(getCurrentHour(), 4, 6);
-      };
-
-      IS_IT[DAY_TIMES.MORNING] = function () {
-        return isBetween(getCurrentHour(), 6, 12);
-      };
-
-      IS_IT[DAY_TIMES.LUNCH_TIME] = function () {
-        return isBetween(getCurrentHour(), 12, 13);
-      };
-
-      IS_IT[DAY_TIMES.AFTER_NOON] = function () {
-        return isBetween(getCurrentHour(), 13, 19);
-      };
-
-      IS_IT[DAY_TIMES.EVENING] = function () {
-        return isBetween(getCurrentHour(), 19, 23);
-      };
-
-      IS_IT[DAY_TIMES.WORKDAY_NIGHT] = function () {
-        var isDayMatching = !isDayWeekend(getCurrentWeekDay());
-        var isNight = isHourNight(getCurrentHour());
-
-        return isDayMatching && isHourMatching;
-      };
-
-      IS_IT[DAY_TIMES.WEEKEND_NIGHT] = function () {
-        var isDayMatching = isDayWeekend(getCurrentWeekDay());
-        var isNight = isHourNight(getCurrentHour());
-
-        return isDayMatching && isHourMatching;
-      };
-
-      INTRODUCTIONS[DAY_TIMES.WEEKSTART_MORNING]= 'Herzlichen Glückwunsch! Du hast nichts gewonnen, aber du bist wahrscheinlich der erste Besucher diese Woche.';
-      INTRODUCTIONS[DAY_TIMES.EARLY_MORNING]= 'Mach das Licht aus!';
-      INTRODUCTIONS[DAY_TIMES.MORNING]= 'Morgen. Kaffee gefällig? ☕';
-      INTRODUCTIONS[DAY_TIMES.LUNCH_TIME]= 'Mahlzeit.';
-      INTRODUCTIONS[DAY_TIMES.AFTER_NOON] = 'Hi, Hallo, und einen guten Servus - schön, dass du da bist!'
-      INTRODUCTIONS[DAY_TIMES.EVENING]= 'Schönen Feierabend!';
-      INTRODUCTIONS[DAY_TIMES.WORKDAY_NIGHT]= 'Morgen frei, oder nachtaktiv?';
-      INTRODUCTIONS[DAY_TIMES.WEEKEND_NIGHT]= 'Mensch, du wirst am Montag aber keine interessanten Geschichten zu erzählen haben 🤐';
-    });
-  </script>
+  <h1>SVG Animation Fun!</h1>
+  <h2>Fun with
+    <span style="text-decoration: line-through">flags</span> SVG Animation!</h2>
+  <div class="logo">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1416 1416">
+      <!-- <path class="big" stroke="black" fill="none" d="M 708,142.31 C 543.01,307.30333 378.02,472.29667 213.03,637.29 216.12394,731.5591 242.45004,845.28721 338.07371,886.41284 387.37696,909.05426 441.92134,918.46966 495.87,920.13 637.29,778.71 778.71,637.29 920.13,495.87 c 94.2691,3.09394 207.9972,29.42004 249.1228,125.04371 22.6415,49.30325 32.0569,103.84763 33.7172,157.79629 C 1037.98,943.70333 872.99,1108.6967 708,1273.69 M 849.42,283.74 C 692.44333,440.71667 535.46667,597.69333 378.49,754.67 m 188.09,377.59 C 724.26333,974.57667 881.94667,816.89333 1039.63,659.21 M 209.49,913.77 c -16.61667,17.32333 -33.23333,34.64667 -49.85,51.97 M 1207.22,500.11 c 16.7333,-18.15 33.4667,-36.3 50.2,-54.45"
+      id="Pfad" /> -->
+      <path class="big" fill="none" d="M 708,142.31 C 543.01,307.30333 378.01999,472.29668 213.02999,637.29002 c 3.09394,94.2691 29.42004,207.9972 125.04371,249.12284 49.30325,22.6414 103.84763,32.05681 157.79629,33.71716 C 637.29,778.71002 778.71,637.29002 920.13,495.87001 c 94.2692,3.09394 207.9972,29.42004 249.1228,125.04371 22.6414,49.30326 32.0568,103.84764 33.7171,157.7963 C 1037.98,943.70338 872.99,1108.6968 708,1273.69 M 209.48999,913.77003 c -16.61667,17.32332 -33.23333,34.64664 -49.85,51.96996 M 1207.2199,500.11001 c 16.7333,-18.15 33.4668,-36.3 50.2001,-54.45001"
+        id="Pfad-3" />
+      <path fill="none" d="M 849.42003,283.74 C 692.44333,440.7167 535.46667,597.6933 378.49,754.67" id="Pfad-6" />
+      <path fill="none" d="M 566.57999,1132.26 C 724.26332,974.5767 881.94667,816.89333 1039.63,659.21" id="Pfad-7" />
+      <path fill="none" d="m 209.48999,913.76999 c -16.61667,17.3234 -33.23333,34.6467 -49.85,51.97" id="Pfad-3-5" />
+      <path fill="none" d="m 1207.22,500.11 c 16.7333,-18.15 33.4668,-36.3 50.2001,-54.45002" id="Pfad-3-3" />
+    </svg>
+  </div>
 </body>
 
 </html>
