--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 </head>
 
 <body>
-  <h1>Welcome on the Homepage of me, esai! ✌️</h1>
+  <h1>Welcome!</h1>
+  <p>on the Homepage of me, esai! ✌️</p>
   <div class="logo">
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1416 1416">
       <!-- <path class="big" stroke="black" fill="none" d="M 708,142.31 C 543.01,307.30333 378.02,472.29667 213.03,637.29 216.12394,731.5591 242.45004,845.28721 338.07371,886.41284 387.37696,909.05426 441.92134,918.46966 495.87,920.13 637.29,778.71 778.71,637.29 920.13,495.87 c 94.2691,3.09394 207.9972,29.42004 249.1228,125.04371 22.6415,49.30325 32.0569,103.84763 33.7172,157.79629 C 1037.98,943.70333 872.99,1108.6967 708,1273.69 M 849.42,283.74 C 692.44333,440.71667 535.46667,597.69333 378.49,754.67 m 188.09,377.59 C 724.26333,974.57667 881.94667,816.89333 1039.63,659.21 M 209.49,913.77 c -16.61667,17.32333 -33.23333,34.64667 -49.85,51.97 M 1207.22,500.11 c 16.7333,-18.15 33.4667,-36.3 50.2,-54.45"
@@ -25,6 +26,20 @@
       <path class="dot dot-right" fill="none" d="m 1207.22,500.11 c 16.7333,-18.15 33.4668,-36.3 50.2001,-54.45002" id="Pfad-3-3" />
     </svg>
   </div>
+
+  <div class="clickToReplay">Click the logo, to replay the animation!  ✨💫</div>
+
+  <script>
+    document.querySelector('.logo').addEventListener('click', function(e) {
+      var target = e.currentTarget;
+
+      target.style.display = 'none';
+
+      setTimeout(function() {
+        target.style.display = 'block';
+      }, 10);
+    });
+  </script>
 </body>
 
 </html>
