removed one emoji, to be more professional

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </div>
 </div>
 
-  <div class="clickToReplay">Click the logo, to replay the animation!  ✨💫</div>
+  <div class="clickToReplay">Click the logo, to replay the animation! 💫</div>
 
   <script>
     document.querySelector('.logo').addEventListener('click', function(e) {
