make the portfolio more beautiful

--- a/index.html
+++ b/index.html
@@ -71,7 +71,9 @@
         </div>
       </div>
 
-      <div class="logo__replay-message">Click, to replay! 💫</div>
+      <div class="logo__replay-message show-after-animation">
+        Click, to replay! 💫
+      </div>
 
       <div class="not-for-hire" id="notForHire">
         <h2 class="not-for-hire__title">Not for hire.</h2>
@@ -86,21 +88,18 @@
         >
       </div>
 
-      <section>
+      <section class="show-after-animation">
         <h2>Things I've built</h2>
 
         <ul>
           <li>
-            <a href="https://gitlab.com/esai256/bitronome">
-              Bitronome - a vibrating metronome for FitBit Versa/Versa
-              Lite/Ionic
-            </a>
+            <a href="https://gitlab.com/esai256/bitronome">Bitronome</a> - a
+            vibrating metronome for FitBit Versa/Versa Lite/Ionic
           </li>
 
           <li>
-            <a href="https://gitlab.com/esai256/esai-pomodoro">
-              esai-pomodoro - a pomodoro timer, that started as a spike-project
-            </a>
+            <a href="https://gitlab.com/esai256/esai-pomodoro">esai-pomodoro</a>
+            - a pomodoro timer, that started as a spike-project
           </li>
         </ul>
       </section>
