--- a/index.html
+++ b/index.html
@@ -1,129 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="height=device-height, width=device-width, initial-scale=1.0"
-    />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>esai-home</title>
-    <link rel="stylesheet" type="text/css" href="./index.css" />
-    <link rel="stylesheet" type="text/css" href="./logo.css" />
-    <link rel="apple-touch-icon-precomposed" href="./favicon.ico" />
-    <link rel="icon" type="image/ico" href="./favicon.ico" />
-  </head>
 
-  <body>
-    <header class="header">
-      <h1 class="header__title">Welcome!</h1>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="height=device-height, width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <meta property="og:title" content="esai rocks" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://esai256.github.io/" />
+  <title>esai-home</title>
+  <link rel="stylesheet" type="text/css" href="./index.css" />
+  <link rel="stylesheet" type="text/css" href="./logo.css" />
+  <link rel="apple-touch-icon-precomposed" href="./favicon.ico" />
+  <link rel="icon" type="image/ico" href="./favicon.ico" />
+</head>
 
-      <p class="header__subtitle">on the Homepage of me, esai! ✌️</p>
-    </header>
+<body>
+  <header class="header">
+    <h1 class="header__title">Welcome!</h1>
 
-    <main>
-      <div class="logo__wrapper">
-        <div class="logo" aria-describedby="logoDescription">
-          <svg
-            class="logo__svg"
-            xmlns="http://www.w3.org/2000/svg"
-            viewBox="0 0 1416 1416"
-          >
-            <!--
+    <p class="header__subtitle">on the Homepage of me, esai! ✌️</p>
+  </header>
+
+  <main>
+    <div class="logo__wrapper">
+      <div class="logo" aria-describedby="logoDescription">
+        <svg class="logo__svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1416 1416">
+          <!--
               <path class="big" stroke="black" fill="none" d="M 708,142.31 C 543.01,307.30333 378.02,472.29667 213.03,637.29 216.12394,731.5591 242.45004,845.28721 338.07371,886.41284 387.37696,909.05426 441.92134,918.46966 495.87,920.13 637.29,778.71 778.71,637.29 920.13,495.87 c 94.2691,3.09394 207.9972,29.42004 249.1228,125.04371 22.6415,49.30325 32.0569,103.84763 33.7172,157.79629 C 1037.98,943.70333 872.99,1108.6967 708,1273.69 M 849.42,283.74 C 692.44333,440.71667 535.46667,597.69333 378.49,754.67 m 188.09,377.59 C 724.26333,974.57667 881.94667,816.89333 1039.63,659.21 M 209.49,913.77 c -16.61667,17.32333 -33.23333,34.64667 -49.85,51.97 M 1207.22,500.11 c 16.7333,-18.15 33.4667,-36.3 50.2,-54.45"
               id="Pfad" />
             -->
-            <path
-              class="logo__s-path logo__path"
-              fill="none"
-              d="M 708,142.31 C 543.01,307.30333 378.01999,472.29668 213.02999,637.29002 c 3.09394,94.2691 29.42004,207.9972 125.04371,249.12284 49.30325,22.6414 103.84763,32.05681 157.79629,33.71716 C 637.29,778.71002 778.71,637.29002 920.13,495.87001 c 94.2692,3.09394 207.9972,29.42004 249.1228,125.04371 22.6414,49.30326 32.0568,103.84764 33.7171,157.7963 C 1037.98,943.70338 872.99,1108.6968 708,1273.69"
-              id="Pfad-3"
-            />
+          <path class="logo__s-path logo__path" fill="none"
+            d="M 708,142.31 C 543.01,307.30333 378.01999,472.29668 213.02999,637.29002 c 3.09394,94.2691 29.42004,207.9972 125.04371,249.12284 49.30325,22.6414 103.84763,32.05681 157.79629,33.71716 C 637.29,778.71002 778.71,637.29002 920.13,495.87001 c 94.2692,3.09394 207.9972,29.42004 249.1228,125.04371 22.6414,49.30326 32.0568,103.84764 33.7171,157.7963 C 1037.98,943.70338 872.99,1108.6968 708,1273.69"
+            id="Pfad-3" />
 
-            <path
-              class="logo__i-path-left logo__path"
-              fill="none"
-              d="M 849.42003,283.74 C 692.44333,440.7167 535.46667,597.6933 378.49,754.67"
-              id="Pfad-6"
-            />
+          <path class="logo__i-path-left logo__path" fill="none"
+            d="M 849.42003,283.74 C 692.44333,440.7167 535.46667,597.6933 378.49,754.67" id="Pfad-6" />
 
-            <path
-              class="logo__i-path-right logo__path"
-              fill="none"
-              d="M 566.57999,1132.26 C 724.26332,974.5767 881.94667,816.89333 1039.63,659.21"
-              id="Pfad-7"
-            />
+          <path class="logo__i-path-right logo__path" fill="none"
+            d="M 566.57999,1132.26 C 724.26332,974.5767 881.94667,816.89333 1039.63,659.21" id="Pfad-7" />
 
-            <path
-              class="logo__dot-path-left logo__path"
-              fill="none"
-              d="m 209.48999,913.76999 c -16.61667,17.3234 -33.23333,34.6467 -49.85,51.97"
-              id="Pfad-3-5"
-            />
+          <path class="logo__dot-path-left logo__path" fill="none"
+            d="m 209.48999,913.76999 c -16.61667,17.3234 -33.23333,34.6467 -49.85,51.97" id="Pfad-3-5" />
 
-            <path
-              class="logo__dot-path-right logo__path"
-              fill="none"
-              d="m 1207.22,500.11 c 16.7333,-18.15 33.4668,-36.3 50.2001,-54.45002"
-              id="Pfad-3-3"
-            />
-          </svg>
-        </div>
+          <path class="logo__dot-path-right logo__path" fill="none"
+            d="m 1207.22,500.11 c 16.7333,-18.15 33.4668,-36.3 50.2001,-54.45002" id="Pfad-3-3" />
+        </svg>
       </div>
+    </div>
 
-      <div class="logo__replay-message show-after-animation">
-        Click, to replay! 💫
-      </div>
+    <div class="logo__replay-message show-after-animation">
+      Click, to replay! 💫
+    </div>
 
-      <noscript>
-        You cannot replay the animation if you don't have JavaScript enabled.
-        Sorry :/
-      </noscript>
+    <noscript>
+      You cannot replay the animation if you don't have JavaScript enabled.
+      Sorry :/
+    </noscript>
 
-      <div class="not-for-hire" id="notForHire">
-        <h2 class="not-for-hire__title">Not for hire.</h2>
+    <div class="not-for-hire" id="notForHire">
+      <h2 class="not-for-hire__title">Not for hire.</h2>
 
-        <p class="not-for-hire__content hidden" aria-hidden="true"></p>
-      </div>
+      <p class="not-for-hire__content hidden" aria-hidden="true"></p>
+    </div>
 
-      <div class="aria-descriptions" aria-hidden="true">
-        <span id="logoDescription"
-          >My logo, which resembles the letters e, s, a and i, for my nickname
-          is esai.</span
-        >
-      </div>
+    <div class="aria-descriptions" aria-hidden="true">
+      <span id="logoDescription">My logo, which resembles the letters e, s, a and i, for my nickname
+        is esai.</span>
+    </div>
 
-      <section class="projects">
-        <h2 class="projects__heading">Things I've built</h2>
+    <section class="projects">
+      <h2 class="projects__heading">Things I've built</h2>
 
-        <ul class="projects__list">
-          <li>
-            <a href="https://gitlab.com/esai256/bitronome">Bitronome</a>
-            <img
-              class="projects__icon"
-              src="https://assets.gitlab-static.net/uploads/-/system/project/avatar/12421319/icon.png"
-              style="width: 1.5rem"
-            />
-            <div>
-              a vibrating metronome for FitBit Versa/Versa Lite/Ionic
-            </div>
-          </li>
+      <ul class="projects__list">
+        <li>
+          <a href="https://gitlab.com/esai256/bitronome">Bitronome</a>
+          <img class="projects__icon"
+            src="https://assets.gitlab-static.net/uploads/-/system/project/avatar/12421319/icon.png"
+            style="width: 1.5rem" />
+          <div>
+            a vibrating metronome for FitBit Versa/Versa Lite/Ionic
+          </div>
+        </li>
 
-          <li>
-            <a href="https://gitlab.com/esai256/esai-pomodoro">esai-pomodoro</a>
-            <img
-              class="projects__icon"
-              src="https://assets.gitlab-static.net/uploads/-/system/project/avatar/10598289/esai-pomodoro.png"
-              style="width: 1.5rem"
-            />
-            <div>
-              a pomodoro timer, that started as a spike-project
-            </div>
-          </li>
-        </ul>
-      </section>
-    </main>
+        <li>
+          <a href="https://gitlab.com/esai256/esai-pomodoro">esai-pomodoro</a>
+          <img class="projects__icon"
+            src="https://assets.gitlab-static.net/uploads/-/system/project/avatar/10598289/esai-pomodoro.png"
+            style="width: 1.5rem" />
+          <div>
+            a pomodoro timer, that started as a spike-project
+          </div>
+        </li>
+      </ul>
+    </section>
+  </main>
 
-    <script src="./index.js" type="text/javascript"></script>
-  </body>
+  <script src="./index.js" type="text/javascript"></script>
+</body>
+
 </html>
