--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="height=device-height, width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <meta property="og:title" content="esai rocks" />
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:site" content="@shyftplan" />
+  <meta name="twitter:creator" content="@shyftplan" />
+  <meta property="og:title" content="Hompage of esai" />
+  <meta property="og:description" content="esai rocks" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://esai256.github.io/" />
   <title>esai-home</title>
